This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

09-Feb-2010 Jean-Marie Simonet
^ Refactored mod_articles_archived ini/keys. Updated sql.

09-Feb-2010 Christophe Demko
# Loading the user parameters when he changes them (llow the admin to change its own language for example)
# Removing unused keys in tpl_bluestork.ini which contains the NO keyword
# Adding the manifest files directory
^ Changing the way languages are loaded at install and update phase
^ Correcting revision 14595 (caused errors in user and menu item edit)

08-Feb-2010 Jean-Marie Simonet
^ Refactored mod_popular ini/keys
^ Refactored mod_quickicon ini/keys. Added Language manager icon.
^ Refactored mod_status ini/keys. Added logged back-end users to status.
^ Refactored mod_submenu ini/keys.
^ Refactored mod_title ini/keys
^ Refactored mod_unread ini/keys. Updated sql.

08-Feb-2010 Andrew Eddie
 # Fix bug in JRegistry::setValue - documented as returning the old value, however, the behaviour is to return the set value. Changing this kills JParameter::def.
 
07-Feb-2010 Hannes Papenberg
^ Consolidated a few translation strings in en-GB.ini and removed the en-GB.ini.old.ini in frontend
# Fixed required fields in profile plugin - Thanks Matrikular!
# Fixed backend menu translation - JLanguage::hasKey() was broken. - Thanks Matrikular!
# Fixed bug in discover function. When two plugins have the same name, but are in different folders, they were not discovered

07-Feb-2010 Jean-Marie Simonet
^ Refactored mod_feed site and admin modules ini/keys. Enabled desc translation in com_modules select.
^ Refactored mod_latest ini/keys
^ Refactored mod_logged ini/keys + added some
^ Refactored mod_login (admin) ini/keys. Prevented it from being unpublished.