@@ -4,25 +4,21 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-BOTH="Both"
-CATEGORY ID="Category ID"
-COUNT="Count"
-DESCLATESTNEWS="This Module shows a list of the most recently published and current Articles. Some that are shown may have expired even though they are the most recent."
-FRONTPAGE ITEMS="Front Page Articles"
+MOD_LATEST_NEWS_FIELD_CATEGORY_DESC="Selects Articles from a specific Category."
+MOD_LATEST_NEWS_FIELD_CATEGORY_LABEL="Category"
+MOD_LATEST_NEWS_FIELD_COUNT_DESC="The number of Articles to display (the default is 5)"
+MOD_LATEST_NEWS_FIELD_COUNT_LABEL="Count"
+MOD_LATEST_NEWS_FIELD_FEATURED_DESC="Show/Hide Articles designated as Featured"
+MOD_LATEST_NEWS_FIELD_FEATURED_LABEL="Featured Articles"
+MOD_LATEST_NEWS_FIELD_ORDERING_DESC="Ordering Options"
+MOD_LATEST_NEWS_FIELD_ORDERING_LABEL="Order"
+MOD_LATEST_NEWS_FIELD_USER_DESC="Filter by author"
+MOD_LATEST_NEWS_FIELD_USER_LABEL="Authors"
+MOD_LATEST_NEWS_VALUE_ADDED_BY_ME="Added or modified by me"
+MOD_LATEST_NEWS_VALUE_ANYONE="Anyone"
+MOD_LATEST_NEWS_VALUE_NOTADDED_BY_ME="Not added or modified by me"
+MOD_LATEST_NEWS_VALUE_RECENT_ADDED="Recently Added First"
+MOD_LATEST_NEWS_VALUE_RECENT_MODIFIED="Recently Modified First"
+MOD_LATEST_NEWS_VALUE_RECENT_TOUCHED="Recently Touched First"
+MOD_LATEST_NEWS_XML_DESCRIPTION="This Module shows a list of the most recently published and current Articles. Some that are shown may have expired even though they are the most recent."
 LATEST NEWS="Latest News"
-MOD_LATESTNEWS="Articles - Latest News"
-MODULE MODE="Module Mode"
-PARAMCATEGORYID="Selects Articles from a specific Category or set of Categories. Enter the Category ID from the Category Manager. To specify more than one Category, separate each ID with a comma."
-PARAMENABLECACHE="Select whether to Cache the content of this Module"
-PARAMFRONTPAGEITEMS="Show/Hide Articles designated for the Front Page"
-PARAMSECTIONID="Selects Articles from a specific Section or set of Sections. Enter the Section ID taken from the Section Manager. To specify more than one Section, separate each ID with a comma."
-SECTION ID="Section ID"
-THE NUMBER OF ITEMS TO DISPLAY DEFAULT 5="The number of Articles to display (the default is 5)"
-RECENTLY ADDED FIRST="Recently Added First"
-RECENTLY MODIFIED FIRST="Recently Modified First"
-AUTHORS="Authors"
-ANYONE="Anyone"
-ORDERING OPTIONS="Ordering Options"
-ADDED OR MODIFIED BY ME="Added or modified by me"
-NOT ADDED OR MODIFIED BY ME="Not added or modified by me"
-A FILTER FOR THE AUTHORS="Filter by author"
